# FileStructureComparison

./: CMakeLists.txt  README.md  format.hpp  get_file_read_buffer.hpp  main.cpp
